// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp/> Debe de mostrar una lista de categorias 1`] = `
<div>
  <h2>
    Gif App Search
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Naruto"
      key="Naruto"
    />
    <GifGrid
      category="Goku"
      key="Goku"
    />
  </ol>
</div>
`;

exports[`Pruebas en <GifExpertApp/> Debe de mostrarse correctamente 1`] = `
<div>
  <h2>
    Gif App Search
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
